Implemented logic on adding a flight, editing status of a flight and getting flights sorted by arrival (including filtering by origin and/or destination).

--- a/flightStatus/src/main/resources/application.properties
+++ b/flightStatus/src/main/resources/application.properties
@@ -1,3 +1,9 @@
-spring.application.name=flightStatus
-token.key=totallyarndomlettersbyalishersharipovhiremepls
-token.expiration=60000000
+spring.datasource.url=jdbc:postgresql://localhost:5432/airastana
+spring.datasource.name=airastana
+spring.datasource.username=airastanaadmin
+spring.datasource.password=airastana
+spring.jpa.hibernate.ddl-auto=update
+spring.data.jpa.repositories.enabled=true
+
+spring.liquibase.enabled=false
+spring.liquibase.change-log=db/changelog/db.changelog-master.yaml
