Implemented logic on getting TimeZone of a city using Google Maps API. Checks if arrival is not before departure while considering timezones.

--- a/flightStatus/src/main/resources/application.properties
+++ b/flightStatus/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.data.jpa.repositories.enabled=true
 
 spring.liquibase.enabled=false
 spring.liquibase.change-log=db/changelog/db.changelog-master.yaml
+
+google.apikey=AIzaSyAsSQ-WvN2dOiYLQNE-cQP5OaPiBXigjMs
