Implemented role based JWT auth and authorization, hashing and extracting password, assigning roles

--- a/flightStatus/src/main/resources/application.properties
+++ b/flightStatus/src/main/resources/application.properties
@@ -5,7 +5,8 @@ spring.datasource.password=airastana
 spring.jpa.hibernate.ddl-auto=update
 spring.data.jpa.repositories.enabled=true
 
-spring.liquibase.enabled=false
 spring.liquibase.change-log=db/changelog/db.changelog-master.yaml
+
+springdoc.swagger-ui.enabled=true
 
 google.apikey=AIzaSyAsSQ-WvN2dOiYLQNE-cQP5OaPiBXigjMs
