--- a/flightStatus/src/main/resources/application.properties
+++ b/flightStatus/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/airastana
-spring.datasource.name=airastana
-spring.datasource.username=airastanaadmin
-spring.datasource.password=airastana
-spring.jpa.hibernate.ddl-auto=update
-spring.data.jpa.repositories.enabled=true
+spring.datasource.url = jdbc:postgresql://localhost:5432/airastana
+spring.datasource.name = airastana
+spring.datasource.username = airastanaadmin
+spring.datasource.password= airastana
+spring.jpa.hibernate.ddl-auto = update
+spring.data.jpa.repositories.enabled = true
 
-spring.liquibase.change-log=db/changelog/db.changelog-master.yaml
+spring.liquibase.change-log = db/changelog/db.changelog-master.yaml
 
-springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.enabled = true
 
-google.apikey=AIzaSyAsSQ-WvN2dOiYLQNE-cQP5OaPiBXigjMs
+google.apikey = AIzaSyAsSQ-WvN2dOiYLQNE-cQP5OaPiBXigjMs
