--- a/flightStatus/src/main/resources/logging/logging.properties
+++ b/flightStatus/src/main/resources/logging/logging.properties
@@ -1,8 +1,7 @@
 handlers = java.util.logging.FileHandler
-.level = ERROR
 
-java.util.logging.FileHandler.level = ERROR
+.level = INFO
+
 java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
 java.util.logging.FileHandler.append = true
 java.util.logging.FileHandler.pattern = application.log
-
