hide application.properties credentials, edit the logging file location.

--- a/flightStatus/src/main/resources/application.properties
+++ b/flightStatus/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/airastana
-spring.datasource.name=airastana
-spring.datasource.username=airastanaadmin
-spring.datasource.password=airastana
+spring.datasource.url=jdbc:postgresql://localhost:5432/your_database_name
+spring.datasource.name=your_database_name
+spring.datasource.username=your_database_admin_username
+spring.datasource.password=your_database_admin_password
 spring.jpa.hibernate.ddl-auto=update
 spring.data.jpa.repositories.enabled=true
 spring.liquibase.change-log=db/changelog/db.changelog-master.yaml
 springdoc.swagger-ui.enabled=true
-google.apikey=AIzaSyAsSQ-WvN2dOiYLQNE-cQP5OaPiBXigjMs
+google.apikey=your_google_maps_api_key
